# client-server-app

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
database/: README.md  schema.sql
examples/: client  client.c  client.py  server.py
include/: TileManager.h  common.h  map.h  server.h  utils.h
src/: TileManager.cpp  common.h  gui.cpp  gui.h  main.cpp  map.cpp  server.cpp  utils.cpp  utils.h
